separate Loom application runtime from reactor